reinstate alarm summaries